@@ -46,7 +46,7 @@ export LOG_PROC LOG_DIAG LOG_CUR LOG_VAL
 INFILE_NAME=STDIN
 
 # Input file name 
-APP_INFILES=${INPUTDIR}/ensembl_transcripts.gz
+APP_INFILES="${INPUTDIR}/ensembl_transcripts.gz ${INPUTDIR}/ensembl_ncrna.gz"
 
 # Complete path to config file for assocload
 CONFIG_ASSOCLOAD=${VEGA_ENSEMBLSEQLOAD}/ensembl_transcriptassocload.config
